--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -474,3 +474,10 @@ repo.meta.analyzer.cacheStampedeBlocker.lock.buckets=1000
 # The default value is 10.
 repo.meta.analyzer.cacheStampedeBlocker.max.attempts=10
 
+# Optional
+# Controls whether findings are automatically marked as verified when uploading to DefectDojo.
+# When set to true, all findings will be marked as verified upon upload.
+# When set to false, the "Verified" flag will not be automatically set, allowing manual verification.
+# Default is false.
+defectdojo.findings.auto.verify=false
+
